<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" /> -->


    <EditTextPreference
        android:defaultValue="@string/default_server_url"
        android:key="server_url"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/server_url" />

    <EditTextPreference
        android:defaultValue="@string/default_dest_mail"
        android:key="dest_mail"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/mail_dest" />

    <!-- <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" /> -->

</PreferenceScreen>
