<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_radio_command"
            android:text="@string/command"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_radio_mail"
            android:text="@string/mail"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_radio_notification"
            android:text="@string/notification"/>
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_trigger_argument_edit"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:hint="@string/argument"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_trigger_command_spinner"
        android:layout_margin="10dp"
        android:spinnerMode="dropdown"
        style="@style/spinnerStyle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_trigger_textcontent_edit"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:hint="@string/text_content"/>

</LinearLayout>