<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_enabled"
        android:title="@string/notifications" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_enabled"
        android:key="notifications_sound"
        android:title="@string/notification_sound" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_enabled"
        android:key="notifications_vibrate"
        android:title="@string/notification_vibration" />


</PreferenceScreen>
