<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/le_command"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:textStyle="bold|italic"
        android:textColor="#000000"
        android:id="@+id/dialog_command_title"
        android:layout_marginBottom="2dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_schedule_command_spinner"
        android:layout_below="@id/dialog_command_title"
        android:layout_margin="6dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_schedule_command_spinner"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:id="@+id/dialog_schedule_argument_edit"
        android:hint="@string/argument"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_schedule_radio_group"
        android:layout_below="@+id/dialog_schedule_argument_edit">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/freq_radio_button"
            android:text="@string/frequency"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time_radio_button"
            android:text="@string/time"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/le_frequency"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="8dp"
        android:textStyle="bold|italic"
        android:textColor="#000000"
        android:layout_below="@id/dialog_schedule_radio_group"
        android:id="@+id/dialog_frequency_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_below="@id/dialog_frequency_title"
        android:id="@+id/dialog_lin_lay_freq_1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seconds"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#000000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:id="@+id/dialog_lin_lay_freq_2"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/dialog_lin_lay_freq_1">

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:id="@+id/dialog_frequency_hours"/>

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:id="@+id/dialog_frequency_minutes"/>

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:id="@+id/dialog_frequency_seconds"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="Time"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="8dp"
        android:textStyle="bold|italic"
        android:textColor="#000000"
        android:layout_below="@id/dialog_schedule_radio_group"
        android:id="@+id/dialog_time_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:layout_below="@id/dialog_time_title"
        android:id="@+id/dialog_lin_lay_time_1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#000000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:id="@+id/dialog_lin_lay_time_2"
        android:layout_marginTop="0dp"
        android:visibility="gone"
        android:layout_below="@+id/dialog_lin_lay_time_1">

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:id="@+id/dialog_time_hours"/>

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:id="@+id/dialog_time_minutes"/>

    </LinearLayout>

</RelativeLayout>