<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="3dp"
    card_view:cardCornerRadius="0.7dp"
    card_view:contentPadding="4dp"
    android:padding="8dp"
    android:layout_margin="6dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SERV_NAME"
            android:textStyle="italic"
            android:textColor="#000000"
            android:id="@+id/all_service_el_serv_name"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/all_service_el_serv_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DEV_NAME"
            android:id="@+id/all_service_el_dev_name"
            android:textStyle="italic"
            android:textColor="#000000"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_below="@+id/all_service_el_serv_name"
            android:layout_toEndOf="@+id/all_service_el_dev_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/le_service"
            android:textStyle="bold|italic"
            android:textColor="#000000"
            android:id="@+id/all_service_el_serv_label"
            android:layout_alignTop="@+id/all_service_el_serv_name"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/le_device"
            android:textStyle="bold|italic"
            android:textColor="#000000"
            android:id="@+id/all_service_el_dev_label"
            android:layout_below="@+id/all_service_el_serv_name"
            android:layout_alignStart="@+id/all_service_el_serv_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_value"
            android:textStyle="bold|italic"
            android:textColor="#000000"
            android:id="@+id/all_service_el_last_value"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/all_service_el_dev_name" />

    </RelativeLayout>

</android.support.v7.widget.CardView>