<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="3dp"
    card_view:cardCornerRadius="0.7dp"
    card_view:contentPadding="4dp"
    android:padding="8dp"
    android:layout_margin="6dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/le_device_name"
            android:textStyle="bold|italic"
            android:textColor="#000000"
            android:id="@+id/list_device_name_label"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/le_technology"
            android:layout_below="@+id/list_device_name_label"
            android:id="@+id/list_technology_label"
            android:textColor="#000000"
            android:layout_margin="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/le_always_on"
            android:id="@+id/list_always_on_label"
            android:layout_below="@+id/list_technology_label"
            android:textColor="#000000"
            android:layout_margin="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/le_device_name"
            android:textStyle="bold|italic"
            android:textColor="#000000"
            android:id="@+id/list_device_name_text"
            android:layout_marginLeft="4dp"
            android:layout_alignBottom="@+id/list_device_name_label"
            android:layout_toEndOf="@+id/list_device_name_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/le_technology"
            android:id="@+id/list_technology_text"
            android:textColor="#000000"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_alignBottom="@+id/list_technology_label"
            android:layout_toEndOf="@+id/list_technology_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/le_always_on"
            android:id="@+id/list_always_on_text"
            android:textColor="#000000"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_alignBottom="@+id/list_always_on_label"
            android:layout_toEndOf="@+id/list_always_on_label" />

        <!--
        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/list_dev_image"
            android:src="@drawable/arduino"
            android:layout_below="@+id/list_device_name_text"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/list_hardware_text"
            ></ImageView>
         -->

    </RelativeLayout>

</android.support.v7.widget.CardView>